--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     This is lecture 1.
-    Here is a new feature
+    Here is a new feature.
+    This works!
   </body>
 </html>
